# Zappy

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  CriticalPathAndParallelWorkStreams.md  LICENSE  README.md  build.sh  raylib_install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ai-build.yml  code-quality.yml  dependency-check.yml  gui-build.yml  integration-test.yml  issue-automation.yml  push-to-mirror.yml  release.yml  server-build.yml
ai/: ai_architecture.md
ai/src/: Classes.py  MemorySystem.py  NeuralNetwork.py  ThinkingModule.py  ZappyAI.py  ai.py  main.py  main_ai.py  zappy_ai.py
ai/tests/: test_ai  test_ai.py
docs/: zappy_ai_documentation.md
gui/: CMakeLists.txt  Client.hpp  gui_architecture.md  main.cpp
gui/client/: Client.cpp  Client.hpp  ProtocolHandler.cpp  ProtocolHandler.hpp
gui/map/: Map.cpp  Map.hpp
gui/renderer/: Renderer.cpp  Renderer.hpp
gui/renderer/Camera/: Camera.cpp  Camera.hpp
gui/renderer/Light/: Light.cpp  Light.hpp
gui/renderer/Player/: Player.cpp  Player.hpp
gui/renderer/Shaders/: ShadersManager.cpp  ShadersManager.hpp
gui/ressources/: Ressources.hpp
gui/tests/: test_camera.cpp  test_client.cpp  test_light.cpp  test_map.cpp  test_player.cpp  test_renderer.cpp  test_shader.cpp
resources/models/pixar_lamp/: scene.gltf
server/: CMakeLists.txt  server_architecture.md
server/include/: Client_Info.h  client_info.h  flag.h  ressources.h  server.h
server/src/: client_graphic.c  init_server.c  main.c  main.cpp  parse.c  ressouces.c  test_client.c
server/src/functional/: accept.c  connection.c  create_server_socket.c  handle_client_data.c  handle_player.c  remove_client.c
